fixed github logo on mobile

--- a/style.css
+++ b/style.css
@@ -8,12 +8,6 @@
 
 }
 
-@media (min-width:992px) {
-    #github-logo{
-        visibility: hidden;
-    }
-}
-
 .trans-bg{
         background: rgba(200, 54, 54,0.5);
 }
@@ -24,7 +18,6 @@
   border-radius: 10px;
   position: sticky;
 }
-
 
 /* Animazione pulsante parkidle */
 .parkidle_button {
@@ -84,7 +77,6 @@
 
 
 /*@@@@ Who we Are @@@@*/
-
 .container-fluid h3{
     font-family: "Exo 2",serif;
     font-size: 40px;
